<resources>
    <string name="app_name">WeSplit</string>

    <string name="action_sign_in_short">Inscription</string>
    <string name="email">Email</string>
    <string name="name">Prénom</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Connexion</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_oldPassword">Mot de passe actuel</string>
    <string name="hint_newPassword">Nouveau mot de passe</string>
    <string name="hint_newPasswordConfirmation">Confirmer le nouveau mot de passe</string>

    <string name="hint_name">Fullname</string>
    <string name="hint_nomdepense">Titre</string>
    <string name="hint_montant">Montant</string>
    <string name="btn_login">Connexion</string>
    <string name="btn_link_to_register">Pas encore membre ? Inscrivez-vous !</string>
    <string name="btn_link_to_login">Déjà un compte ? Connectez-vous !</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Mot de passe oublié ?</string>
    <string name="btn_reset_password">Réinitialiser</string>
    <string name="btn_back">Retour à la page de connexion</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Déconnexion</string>
    <string name="btn_continuer">Continuer</string>
    <string name="lbl_forgot_password">Réinitialisation du mot de passe</string>
    <string name="forgot_password_msg">Indiquez votre adresse email et vous recevrez un mail avec les instruction supplémentaires.</string>
    <string name="choix_groupe_bienvenue">Pour utiliser WeSplit et partager vos dépenses, créez un nouveau groupe ou rejoignez un groupe existant.</string>
    <string name="choix_groupe_nouveau">Créer un nouveau groupe</string>
    <string name="choix_groupe_rejoindre">Rejoindre un groupe</string>
    <string name="btn_ajout_depense">Ajouter la dépense</string>
    <string name="btn_modification_depense">Modifier la dépense</string>
    <string name="btn_suppression_depense">Supprimer la dépense</string>
    <string name="btn_afficher_identifiant_groupe">Inviter des amis</string>
    <string name="btn_quitter_groupe">Quitter</string>
    <string name="btn_supprimer_groupe">Supprimer</string>
    <string name="btn_retour">Retour</string>
    <string name="btn_edit">Modifier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
