<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    tools:context="com.uqac.wesplit.GestionGroupeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_groupe"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="0dp">

        <ImageButton
            android:id="@+id/btn_groupe_retour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_arrow_back_white_24dp"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Gestion du groupe"
            android:textColor="@color/white"
            android:textSize="18dp"/>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_groupe"
        android:id="@+id/scrollView2">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingBottom="0dp">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/nom_groupe_texte"
                android:text="Nom du groupe"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="18dp" />
            <Button
                android:id="@+id/btn_afficher_identifiant_groupe"
                android:layout_width="fill_parent"
                android:layout_marginTop="10dip"
                android:layout_height="60dip"
                android:text="@string/btn_afficher_identifiant_groupe"
                android:stateListAnimator="@null" />

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/btn_quitter_groupe"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="10dip"
                    android:layout_marginRight="5dip"
                    android:layout_height="60dip"
                    android:layout_weight="0.5"
                    android:text="@string/btn_quitter_groupe"
                    android:stateListAnimator="@null" />

                <Button
                    android:id="@+id/btn_supprimer_groupe"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="10dip"
                    android:layout_marginLeft="5dip"
                    android:layout_height="60dip"
                    android:layout_weight="0.5"
                    android:text="@string/btn_supprimer_groupe"
                    android:stateListAnimator="@null" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/membres_titre"
                android:text="Membres du groupe"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>
    <ListView
        android:id="@+id/listview_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView2"
        android:background="@color/white" />

</RelativeLayout>
